--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ div{
     background-color: red;
     width: 500px;
     height: 300px;
+    background-image: -webkit-linear-gradient(red, white);
 
 }
 p{
     text-shadow: 2px;
     text-align: center;
     font-size: 20px;
+    color: white;
 }
 
